# HermesDigitalStudio_v2

./: .editorconfig  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.ollama.yml  docker-compose.yml
backend/: Makefile  alembic.ini  main.py  pyproject.toml  ruff.toml  studio.yaml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py
backend/scripts/: dev.sh  diagnose_vision_turn.py  run_messaging_gateway.py  start.sh
backend/src/backend/: __init__.py  hermes_subagent_ext.py  hermes_vendor_ref.py  main.py
backend/src/backend/api/: __init__.py  agent.py  channels.py  chat.py  env.py  health.py  media.py  memory.py  mind.py  model.py  plan.py  platform_gateway.py  settings.py  skill.py  stt.py
backend/src/backend/core/: __init__.py  config.py  container.py  design_tokens.py  error_handlers.py  exceptions.py  logging.py  request_validation.py
backend/src/backend/db/: __init__.py  agent.py  connection.py  knowledge.py  memory.py  memory_scoring.py  model_cost.py  myelination.py  plan.py  repository.py
backend/src/backend/gateway/: __init__.py  _config.py  _utils.py  gateway.py  gateway_manager.py  subprocess_gateway.py
backend/src/backend/middleware/: __init__.py  api_response.py
backend/src/backend/models/: __init__.py
backend/src/backend/prompts/: reflection_prompt.md
backend/src/backend/schemas/: __init__.py  response.py
backend/tests/: conftest.py  run_p0_tests.py
backend/tests/integration/: test_health_api.py  test_neo4j_service.py  test_orchestrate_m3.py
(+256 files in other folders)
