[project]
name = "hermes-digital-studio"
version = "0.1.0"
description = "HermesDigitalStudio — Web UI for Hermes Agent (FastAPI + React)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  # feishu: lark-oapi — 嵌入式消息网关加载 FeishuAdapter 所需；否则日志会报 Feishu 不可用且永不连平台
  "hermes-agent[web,mcp,pty,feishu]",
  "neo4j>=6.2.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5",
  "httpx>=0.28",
  "pytest-mock>=3",
]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

# 不能把 ``packages`` 同时写成数组和 ``[tool.hatch.build.targets.wheel.packages]`` 子表，会触发 TOML duplicate key。
[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

# 相对 backend/：指向用户主目录下的 Downloads（与常见本机 Hermes 解压位置一致）。
# 若路径不同，请改为你的 hermes-agent 根目录，或删除本节并改用 Git 源（见 README）。
[tool.uv.sources]
hermes-agent = { path = "../vendor/hermes-agent", editable = true }
